# easyvgl

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  arch.drawio  check_options.cmake
demos/: simple-demo.c
examples/: CMakeLists.txt  curl-http.c  simple-demo.c
include/: lv_conf.h  lv_drv_conf.h
include/lvgl/src/extra/others/: lv_others.h
include/lvgl/src/extra/others/ime/: lv_ime_pinyin.h  tiny-pinyin.h
include/lvgl/src/extra/widgets/: lv_widgets.h
include/lvgl/src/extra/widgets/keyboard/: lv_cn_keyboard.h  lv_keyboard.h
include/lvgl/src/extra/widgets/virknob/: lv_virknob.h
include/lvgl/src/hal/: lv_hal_disp.h
include/lvgl/src/misc/: lv_color.h  lv_txt.h
porting/: CMakeLists.txt  api.h  macro.cmake
porting/api/: embedded.h  mutex.h  wlan.h
res/preferences/: Factory.json  User.json
src/: CMakeLists.txt  easyvgl.c  easyvgl.h  modules.h  styles.h  uikit.h  utils.h
src/lv_ext/: wrapper.c  wrapper.h
src/modules/: png-sequence.c  png-sequence.h  preference.c  preference.h  timer.c  timer.h
src/oo/: app.c  app.h  obj.h  page.c  page.h  router.c  router.h
src/react/: state.c  state.h
src/ui-kit/: fonts.c  fonts.h  popup.c  popup.h  toast.c  toast.h
src/uikit/: fonts.c  fonts.h  png-sequence.c  png-sequence.h  popup.c  popup.h  toast.c  toast.h  types.h
src/utils/: device_ctl.c  device_ctl.h  fonts.c  fonts.h  lv_wrapper.c  lv_wrapper.h  math.h  shell.h  styles.c  styles.h  tools.c  tools.h  types.h
